--- a/userList Tabela/style.css
+++ b/userList Tabela/style.css
@@ -45,12 +45,15 @@ input,label{
     color: white;
 
 }
+.div{
+    height: 100%;
 
+}
 .usersTable{ 
-    width: 20%;
-    min-width: 600px;
+    position: relative;
+    top: 200px;
+    min-width: 700px;
     background-color: rgb(153, 153, 255);
-    width: 30%;
     border: 1px solid black;
     font-size: 20px;
     border-collapse: collapse;
@@ -64,6 +67,9 @@ th,td{
     text-align: left;
     padding-left: 3%;
     border: 1px solid black;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 input{
     padding: 5px;
