--- a/userList Tabela/style.css
+++ b/userList Tabela/style.css
@@ -52,7 +52,7 @@ input,label{
 .usersTable{ 
     position: relative;
     top: 200px;
-    min-width: 700px;
+    width: 700px;
     background-color: rgb(153, 153, 255);
     border: 1px solid black;
     font-size: 20px;
