--- a/Quiz/style.css
+++ b/Quiz/style.css
@@ -1,8 +1,64 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 .main {
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+    background: rgb(63,94,251);
+background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+}
+.naslov{
+    height: 10%;
+    font-size: 30px;
+    font-weight: 900;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+}
+#pitanje{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: rgb(41, 40, 41);
+    margin: 1% 0%;
+    width: 50%;
+    height: 20%;
+    font-size: 25px;
+    font-weight: 700;
+    border-radius: 20px;
+    background: rgb(238,174,202) 60%;
+background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 60%);
+    
+}
+#odgovori{
+    width: 50%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 20px;
+    background: rgb(238,174,202);
+    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+}
+.buttonOdgovor{
+    border-radius: 20px;
+    border: 0px solid transparent;
+    width: 300px;
+    height: 50px;
+    font-size: 20px;
+    font-weight: 700;
+    color: white;
+    background: rgb(63,94,251);
+background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+    
 }
