--- a/Quiz/style.css
+++ b/Quiz/style.css
@@ -62,3 +62,6 @@ background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 
 background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
     
 }
+.buttonOdgovor:hover{
+    color: black;
+}
